--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
   <header>
     <h1>Elevate Consultancy</h1>
-    <p>Helping businesses grow through strategy, innovation, and clarity.</p>
+    <p>Helping e-commerce and multi-channle retail businesses solve problems and scale.</p>
   </header>
 
   <nav>
@@ -157,7 +157,7 @@
   <section id="contact">
     <h2>Get in Touch</h2>
     <p>If you'd like to discuss how we can support your business, reach out via email at 
-      <a href="mailto:info@elevateconsultancy.co.uk">info@elevateconsultancy.co.uk</a>.
+      <a href="mailto:info@elevateconsultancy.co.uk">max@elevateconsultancy.co.uk</a>.
     </p>
   </section>
 
