--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   <section id="contact">
     <h2>Get in Touch</h2>
     <p>If you'd like to discuss how we can support your business, reach out via email at 
-      <a href="mailto:info@elevateconsultancy.co.uk">max@elevateconsultancy.co.uk</a>.
+      <a href="mailto:max@elevateconsultancy.co.uk">max@elevateconsultancy.co.uk</a>.
     </p>
   </section>
 
