--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+l<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -122,7 +122,7 @@
 <body>
   <header>
     <h1>Elevate Consultancy</h1>
-    <p>Helping e-commerce and multi-channle retail businesses solve problems and scale.</p>
+    <p>Helping e-commerce and multi-channel retail businesses solve problems and scale.</p>
   </header>
 
   <nav>
