--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ l<!DOCTYPE html>
 
   <section id="about">
     <h2>About </h2>
-    <p>I am Max McKellar, I started Elevate Consultancy in 2025 after 25 years helping build and then run an e-commerce and multi-channel retail business as the Group Managing Director. I am a highly experienced digital commerce, marketing, operations and commercail leader with almost 3 decades of hands-on experience across all the foudational aspects of starting, running and growing a business. From the shop-floor to Boardroom my carree has been driven by a positive, problem-solving approach and practical skillset. Through Elevate Consultancy I partner with ambitious organisations to unlock potential, streamline operations, and deliver measurable growth. My approach is rooted in real-world expereince, insight, collaboration, and practical implementation.</p>
+    <p>I am Max McKellar, I started Elevate Consultancy in 2025 after 25 years helping build and then run an e-commerce and multi-channel retail business as the Group Managing Director. I am a highly experienced digital commerce, marketing, operations and commercail leader with almost 3 decades of hands-on experience across all the foudational aspects of starting, running and growing a business. <br><br>From the shop-floor to Boardroom my carree has been driven by a positive, problem-solving approach and practical skillset. Through Elevate Consultancy I partner with ambitious organisations to unlock potential, streamline operations, and deliver measurable growth. My approach is rooted in real-world expereince, insight, collaboration, and practical implementation.</p>
   </section>
 
   <section id="services">
